--- a/src/components/general_components/Carousel.css
+++ b/src/components/general_components/Carousel.css
@@ -1,5 +1,1 @@
 /* ID */
-.slider {
-	z-index: 0;
-	position: relative;
-}
